kubernetes/apps/kritika-system/kritika/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kritika-webhook
spec:
  hostnames:
    - "kritika-webhook.kris.party"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: kritika
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /hooks/
